fix loading bar appearing above elements (very high z-index, fix with alternate background that's not the navbar border)

--- a/services/core-web/src/styles/components/NavBar.scss
+++ b/services/core-web/src/styles/components/NavBar.scss
@@ -6,7 +6,6 @@
   width: 100%;
   justify-content: space-between;
   background-color: $nav-color;
-  border-bottom: 8px solid $nav-border-color;
   padding: 0 $default-padding-lg 0 $default-padding-md;
 
   &--search {
